--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^2.3.2"
     }
 }
