--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "datatables.net-dt": "^2.3.2"
+        "datatables.net-dt": "^2.3.2",
+        "install": "^0.13.0",
+        "npm": "^11.4.2"
     }
 }
