--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "firebase/php-jwt": "^6.11",
+        "guzzlehttp/guzzle": "^7.9",
+        "kreait/firebase-php": "^7.20",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
